RESOLVED FIXED168398
Fix ASAN build after r212401
https://bugs.webkit.org/show_bug.cgi?id=168398
Summary Fix ASAN build after r212401
Alex Christensen
Reported 2017-02-15 16:23:16 PST
Fix ASAN build after r212401
Attachments
Patch (25.76 KB, patch)
2017-02-15 16:23 PST, Alex Christensen
no flags
Patch (6.23 KB, patch)
2017-02-15 16:44 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2017-02-15 16:23:36 PST
WebKit Commit Bot
Comment 2 2017-02-15 16:26:31 PST
Attachment 301671 [details] did not pass style-queue: ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_capture/objc/video_capture.mm:60: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_capture/objc/video_capture.mm:61: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_capture/objc/video_capture.mm:68: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_capture/objc/video_capture.mm:69: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 4 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2017-02-15 16:27:06 PST
Comment on attachment 301671 [details] Patch As discussed on IRC, nowai.
Alex Christensen
Comment 4 2017-02-15 16:44:57 PST
Alex Christensen
Comment 5 2017-02-15 16:56:50 PST
Alex Christensen
Comment 6 2017-02-17 11:15:29 PST
Note You need to log in before you can comment on or make changes to this bug.