Fix ASAN build after r212401 https://bugs.webkit.org/show_bug.cgi?id=168398

* Source/webrtc/media/engine/webrtcvideocapturer.cc:
* libwebrtc.xcodeproj/project.pbxproj:



Canonical link: https://commits.webkit.org/185433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212413 268f45cc-cd09-0410-ab3c-d52691b4dbfc